@@ -7,9 +7,9 @@ ID		PRIORITE	STATUT		QUI			DESCRIPTION
 157		?			non lancé	?			BUG : Les CM se bloquent dès qu'elles voient un obstable en rentrant à la base
 158		?			non lancé	?			BUG : Le suivi des phéromones est pas top : les OUV tournent en rond parfois
 
-156		2			non lancé	[py]		Implémenter un meilleur retour à la base pour éviter les obstacles
+156		?			non lancé	?			Implémenter un meilleur retour à la base pour éviter les obstacles
 
-155		2		>>	attente		[py]		LA reine reçoit de ma bouffe : particules roses	
+155		2		>>	attente		[py]		LA reine reçoit de la bouffe : particules roses	
 
 
-[Dernier ID utilisé : 159]
+[Dernier ID utilisé : 160]
